--- a/fly.toml
+++ b/fly.toml
@@ -1,16 +1,23 @@
-# Fly.io configuration for ego_site_htmx
-# Change the app name below to your actual Fly app name
-app = "ego-site-htmx"
+# fly.toml app configuration file generated for ego-docs on 2026-01-22T06:18:31Z
+#
+# See https://fly.io/docs/reference/configuration/ for information about how to use this file.
+#
 
-primary_region = "iad"
+app = 'ego-docs'
+primary_region = 'iad'
 
 [build]
-  dockerfile = "Dockerfile"
 
 [http_service]
   internal_port = 8080
   force_https = true
-  auto_stop_machines = true
+  auto_stop_machines = 'stop'
   auto_start_machines = true
   min_machines_running = 0
-  processes = ["app"]
+  processes = ['app']
+
+[[vm]]
+  memory = '1gb'
+  cpu_kind = 'shared'
+  cpus = 1
+  memory_mb = 1024
